# prebid-server-deployment-on-aws

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  deploy.sh  destroy.sh  solution-manifest.yaml
source/: pyproject.toml  pytest.ini
source/infrastructure/: app.py  cdk.json  setup.py
source/infrastructure/prebid_server/: alb_access_logs_construct.py  alb_entry_deployment.py  cache_construct.py  cloudfront_entry_deployment.py  cloudfront_waf_construct.py  cloudwatch_alarms_construct.py  cloudwatch_dashboard_construct.py  cloudwatch_metrics_construct.py  condition_aspect.py  container_image_construct.py  ecs_service_construct.py  ecs_task_construct.py  efs_construct.py  operational_metrics_construct.py  prebid_artifacts_constructs.py  prebid_configs_construct.py  prebid_datasync_constructs.py  prebid_glue_constructs.py  prebid_server_stack.py  rtb_fabric_construct.py  stack_cfn_parameters.py  stack_constants.py  vpc_construct.py  vpc_peering_construct.py
source/loadtest/: README.md  test-auction-amt.py
source/loadtest/amt-bidder/: AmtBidderTest.java  amt.json  amt.yaml  copy-bidder-files.sh  test-auction-amt-request.json
source/loadtest/bidder_simulator/: app.py  bidder_simulator_stack.py  cdk.json
source/loadtest/demo/: README.md  app.js  index.html  prebid9.38.0.js
source/loadtest/jmx/: prebid_server_test_plan_using_amt_adapter.jmx
source/tests/: conftest.py  setup.py
source/tests/functional_tests/: README.md  requirements-test.txt  run-functional-tests.sh  test_data_sync_buckets.py  test_metric_etl.py  test_prebid_auction.py
(+66 files in other folders)
